objects/AccountAssignments__c.object
<CustomObject>
    <description>This object is used to store Overlay Account Assignments from Legacy system and also Primary rep (Owner Id) assignments. The data will be then picked up by a Batch Apex job to do actual Account Team Assignments.</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>This will store the Legacy Account ID</description>
        <externalId>true</externalId>
        <label>AccountId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>Type of Account, Customer or Site etc...</description>
        <label>AccountType</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>AccountTeamAssignments</relationshipLabel>
        <relationshipName>AccountTeamAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to relate to the Account object for custom reporting.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountTeamAssignments</relationshipLabel>
        <relationshipName>AccountTeamAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EntityIdLength__c</fullName>
        <formula>LEN(Entity_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EntityIdLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Id_Padded__c</fullName>
        <formula>if( LEFT(Entity_Id__c, 1) ==&apos;0&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Id Padded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Id__c</fullName>
        <description>Entity Id it can be oracle_party_id, oracle_party_site_id, aops_cust_id or aops_seq_id.</description>
        <externalId>true</externalId>
        <label>Entity Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>PROSPECT</fullName>
                </value>
                <value>
                    <fullName>ODN Customer</fullName>
                </value>
                <value>
                    <fullName>ODS Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CUSTOMER-ERROR</fullName>
                </value>
                <value>
                    <fullName>USER-ERROR</fullName>
                </value>
                <value>
                    <fullName>OTHER-ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ex_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ex_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Emp_Id_1__c</fullName>
        <label>Inactive Emp Id 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Emp_Id_2__c</fullName>
        <label>Inactive Emp Id 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Emp_Id_3__c</fullName>
        <label>Inactive Emp Id 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Emp_Id_Rest__c</fullName>
        <label>Inactive Emp Id Rest</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverlayEmpID10__c</fullName>
        <description>Employee Id of Overlay Employee 10, which is assigned to Account Team</description>
        <label>Overlay Emp ID 10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverlayEmpID11__c</fullName>
        <description>Employee Id of Overlay Employee 11, which is assigned to Account Team</description>
        <label>Overlay Emp ID 11</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverlayEmpID12__c</fullName>
        <description>Employee Id of Overlay Employee 12, which is assigned to Account Team</description>
        <label>Overlay Emp ID 12</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverlayEmpRole10__c</fullName>
        <label>Overlay Emp Role 10</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverlayEmpRole11__c</fullName>
        <label>Overlay Emp Role 11</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverlayEmpRole12__c</fullName>
        <label>Overlay Emp Role 12</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryEmpId__c</fullName>
        <description>Primary Employee id, mapped to Owner Id of the Account</description>
        <label>Primary Emp Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryEmpRole__c</fullName>
        <description>Role of the Primary Employee</description>
        <label>Primary Emp Role</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the record will be Open when created. Process when success and Error on issues</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Partially Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Hour__c</fullName>
        <formula>((NOW() - LastModifiedDate) * 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update_Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>AccountTeamAssignment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>AssignmentsNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountTeamAssignments</pluralLabel>
    <recordTypes>
        <fullName>GT</fullName>
        <active>true</active>
        <label>GT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Office_Depot</fullName>
        <active>true</active>
        <description>This is created to distinguish the Account Assignment records of OfficeDepot from OfficeMax</description>
        <label>OfficeDepot</label>
    </recordTypes>
    <recordTypes>
        <fullName>Office_Max</fullName>
        <active>true</active>
        <description>This is created to capture the Overlays of Office Max to be assigned to Paraccel Customers</description>
        <label>OfficeMax</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Temp_Validation_to_stop_OD_Assignments</fullName>
        <active>false</active>
        <description>Temp-Validation to stop OD Assignments</description>
        <errorConditionFormula>if(((RecordTypeId == &apos;012E000000092uI&apos;) &amp;&amp; ( OwnerId ==&apos;005E0000000R7xz&apos;)),True,False)</errorConditionFormula>
        <errorMessage>Temp - Validation_to_stop_OD_Assignments</errorMessage>
    </validationRules>
</CustomObject>